# cherries-4-prs

./: Cargo.toml  LICENSE.md  README.md  cherries-4-prs.service  config.toml
src/: api.rs  bonusly.rs  config.rs  credentials.rs  github.rs  lib.rs  main.rs  notify_send.rs
