[package]
name = "cherries-4-prs"
version = "1.0.0"
authors = ["Rebecca Turner <rturner@starry.com>"]
edition = "2018"
description = "u approve my PRs, i give u cherries"
readme = "README.md"
# repository = "https://github.com/9999years/rust-cli-template"
license-file = "LICENSE.md"
keywords = ["github", "bonusly"]  # free text
# categories = []  # https://crates.io/category_slugs
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0"
tracing = { version = "0", features = ["attributes"] }
tracing-subscriber = "0"
tracing-error = "0"
structopt = "0"
octocrab = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# config = { version = "0", features = ["hjson"] }  # also supports ini, yaml
# termcolor = "1"
# dialoguer = "0"
# fuzzy-matcher = "0"  # fuzzy string-matching
# tabwriter = "1"  # tab-aligned printing
# regex = "1"
# cmd_lib = "0"
# float-cmp = "0"
# maplit = "1"
# auto_enums = "0"  # return multiple types from the same fn
# derive_builder = "0"
# wyz = "0"  # myrrlyn's utils
# derivative = "2"
# derive_more = "0"
# fasteval = "0"  # calculator language

[dev-dependencies]
pretty_assertions = "0"
indoc = "1"
criterion = "0"
