[package]
name = "cherries-4-prs"
version = "1.0.0"
authors = ["Rebecca Turner <rturner@starry.com>"]
edition = "2021"
description = "u approve my PRs, i give u cherries"
readme = "README.md"
# repository = "https://github.com/9999years/rust-cli-template"
license-file = "LICENSE.md"
keywords = ["github", "bonusly"]  # free text
# categories = []  # https://crates.io/category_slugs
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.5"
fuzzy-matcher = "0.3"
octocrab = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
secrecy = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing = { version = "0.1", features = ["attributes"] }

[dev-dependencies]
pretty_assertions = "0"
indoc = "1"
